2005-03-09 Paul Stoffregen <paul AT pjrc.com>

	* device/lib/printf_fast.c: fix leading zero format, eg "%02d"

2005-05-09 Raphael Neider <rneider AT web.de>

	* src/SDCCopt.c (killDeadCode): fixed bug #1156016

2005-03-06 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCicode.h: moved CRITICAL and ENDCRITICAL from SKIP_IC2 to SKIP_IC
	* src/mcs51/ralloc.c (willCauseSpill): added check for REG_BIT type,
	  (regTypeNum): set REG_BIT type if necessary
	* src/mcs51/ralloc.h: added define REG_BIT, used to fix bug 1144613
	* support/regression/tests/critical.c: check bug 1144613

2005-03-02 Raphael Neider <rneider AT web.de>

	* src/pic16/gen.c (genRightShiftLiteral): fixed bug #1154256

2005-02-26 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/avr/ralloc.c (serialRegAssign),
	* src/ds390/ralloc.c (serialRegAssign),
	* src/hc08/ralloc.c (serialRegAssign),
	* src/mcs51/ralloc.c (serialRegAssign),
	* src/pic/ralloc.c (serialRegAssign),
	* src/pic16/ralloc.c (serialRegAssign),
	* src/xa51/ralloc.c (serialRegAssign),
	* src/z80/ralloc.c (serialRegAssign): fixed bug #1105154

2005-02-22 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCast.c (decorateType): fixed bug 1124787

2005-02-20 Hubert Sack <sack AT digiplan.de>
	committed by Frieder Ferlemann <Frieder.Ferlemann AT web.de>

	* src/mcs51/peeph.def: added peepholes 3.h-k and 132.a-f from
	patch #1121755

2005-02-20 Frieder Ferlemann <Frieder.Ferlemann AT web.de>

	* src/SDCCpeeph.def: new keyword "labelRefCountChange" which allows peepholes
	to keep the correct label reference count when adding/removing references
	to labels. A peephole file using this is appended to patch #1144962.

2005-02-14 Raphael Neider <rneider AT web.de>

	* device/lib/pic16/libc/string/memccpy.c: changed 3rd argument to char
	* src/SDCC.lex (process_pragma): fixed to make disable_warning work for PIC16
	* src/pic16/gen.c (aopForSym, calls to pic16_aopOp): prevent unneccessary